--- a/common_card/common_card.html
+++ b/common_card/common_card.html
@@ -1,12 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="/common_card/card.css">
+    <title>common_card</title>
 </head>
+
 <body>
-    
+
+    <section>
+
+        <!-- CARD -->
+        <div class="card-style">
+            <div class="card" style="width: 18rem;">
+
+                <div class="card-header">
+                    View Cow Lists
+                </div>
+
+                <div class="card-body text-center px-0 pt-0">
+                    <img src="./images/cow.png" class="img-fluid card-body-img mb-3" alt="...">
+                    <a href="#" class="btn card-btn">Continue</a>
+                </div>
+
+            </div>
+        </div>
+        <!-- CARD -->
+        
+    </section>
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+    </script>
 </body>
+
 </html>
