--- a/common_table/common_table.html
+++ b/common_table/common_table.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/common_table/style.css">
     <title>Table</title>
 </head>
 
@@ -16,7 +16,7 @@
     <section>
         <div class="table-responsive col-lg-12 table-style">
 
-            <table class="table table-hover">
+            <table class="table table-hover" id="insurance_table">
                 <thead>
                     <tr>
                         <th scope="col">Agent Name</th>
@@ -26,7 +26,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
+                    <!-- <tr>
                         <td scope="row">Rahim Uddin</td>
                         <td>Saver</td>
                         <td>Saver</td>
@@ -94,7 +94,7 @@
                         <td>Chandpur</td>
                         <td>Chandpur</td>
                         <td>10</td>
-                    </tr>
+                    </tr> -->
 
                 </tbody>
             </table>
@@ -105,7 +105,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
     </script>
-
+    <script src="./common_table.js"></script>
 </body>
 
 </html>
