--- a/common_table/common_table.html
+++ b/common_table/common_table.html
@@ -14,6 +14,8 @@
 <body>
 
     <section>
+
+        <!-- Table -->
         <div class="table-responsive col-lg-12 table-style">
 
             <table class="table table-hover" id="insurance_table">
@@ -99,12 +101,16 @@
                 </tbody>
             </table>
         </div>
+        <!-- Table -->
+
     </section>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
     </script>
+
+    <!-- Table Code -->
     <script src="./common_table.js"></script>
 </body>
 
