--- a/common_card/common_card.html
+++ b/common_card/common_card.html
@@ -13,7 +13,7 @@
 
 <body>
 
-    <section>
+    <section id="card-1">
 
         <!-- CARD -->
         <div class="card-style">
@@ -30,8 +30,43 @@
 
             </div>
         </div>
-        <!-- CARD -->
-        
+    </section>
+    <!-- CARD -->
+
+    <section id="card-2">
+        <div class="card-style">
+            <div class="card" style="width: 34rem;">
+
+                <div class="card-header ps-4">
+                    Agent Information
+                </div>
+
+                <div class="card-body">
+
+                    <div class="row pb-2 pt-2 line-details">
+                        <div class="col-3 ps-4">Name</div>
+                        <div class="col-1">:</div>
+                        <div class="col-8">Forhad Ibn Haque</div>
+                    </div>
+
+                    <div class="row pb-2 pt-2 line-details">
+                        <div class="col-3 ps-4">Email</div>
+                        <div class="col-1">:</div>
+                        <div class="col-8">forhad1996rion@gmail.com</div>
+                    </div>
+
+                    <div class="row pb-2 pt-2 line-details">
+                        <div class="col-3 ps-4">Phone</div>
+                        <div class="col-1">:</div>
+                        <div class="col-8">+8801780995516</div>
+                    </div>
+
+
+                </div>
+
+            </div>
+        </div>
+
     </section>
 
 
