--- a/InsuranceSite/field_agent_list/fiels_agent.html
+++ b/InsuranceSite/field_agent_list/fiels_agent.html
@@ -10,13 +10,11 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <!-- Css -->
-    <link rel="stylesheet" href="./home_page.css" />
-
-    <title>InsureCow</title>
+    <link rel="stylesheet" href="../field_agent_list/field_agent.css" />
+    <title>Field Agent List</title>
 </head>
 
-<body class="container p-0">
-
+<body>
     <!-- Navbar -->
     <header>
         <div>
@@ -76,54 +74,98 @@
         </div>
     </header>
     <!-- Navbar -->
-    
-<!-- Middle Content -->
+
     <section>
 
-        <div class="main-section">
+        <!-- Table -->
+        <div class="table-responsive col-lg-12 table-style">
 
-            <div class="welcome-msg">
-                <h3 class="text-lg-center text-sm-start">Hi, Wasif.</h3>
-                <h2 class="text-lg-center text-sm-start">Welcome To Insure Cow!</h2>
-            </div>
+            <table class="table table-hover" id="insurance_table">
+                <thead>
+                    <tr>
+                        <th scope="col">Agent Name</th>
+                        <th scope="col">Thana</th>
+                        <th scope="col">Post</th>
+                        <th scope="col">Reg. cattle Numbers</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <!-- <tr>
+                        <td scope="row">Rahim Uddin</td>
+                        <td>Saver</td>
+                        <td>Saver</td>
+                        <td>12</td>
+                    </tr>
 
-            <div class="row">
-                <div class="card-section">
-                    <div class="col-lg-4 card-1">
-                        <div class="card-style">
-                            <div class="card" style="width: 18rem;">
-                                <div class="card-header">
-                                    View Cow Lists
-                                </div>
-                                <div class="card-body text-center px-0 pt-0">
-                                    <img src="./images/cow.png" class="img-fluid card-body-img mb-3" alt="...">
-                                    <a href="#" class="btn card-btn">Continue</a>
-                                </div>
+                    <tr>
+                        <td scope="row">Rasal Khan</td>
+                        <td>Mirpur</td>
+                        <td>Mirpur</td>
+                        <td>08</td>
+                    </tr>
 
-                            </div>
-                        </div>
-                    </div>
+                    <tr>
+                        <td scope="row">Karim Ali</td>
+                        <td>Khulna</td>
+                        <td>Khulna</td>
+                        <td>25</td>
+                    </tr>
 
-                    <div class="col-lg-4">
-                        <div class="card" style="width: 18rem;">
-                            <div class="card-header">
-                                View Field Agent Lists
-                            </div>
+                    <tr>
+                        <td scope="row">Satu Rahman</td>
+                        <td>Kushtia</td>
+                        <td>Kushtia</td>
+                        <td>20</td>
+                    </tr>
 
-                            <div class="card-body text-center px-0 pt-0">
-                                <img src="./images/group.png" class="img-fluid card-body-img mb-3" alt="...">
-                                <a href="#" class="btn card-btn">Continue</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                    <tr>
+                        <td scope="row">Asif Rahman</td>
+                        <td>Bagura</td>
+                        <td>Bagura</td>
+                        <td>16</td>
+                    </tr>
 
-            </div>
+                    <tr>
+                        <td scope="row">Salman Khan</td>
+                        <td>Rangpur</td>
+                        <td>Rangpur</td>
+                        <td>05</td>
+                    </tr>
 
+                    <tr>
+                        <td scope="row">Raju Uddin</td>
+                        <td>Uttara</td>
+                        <td>Uttara</td>
+                        <td>27</td>
+                    </tr>
+
+                    <tr>
+                        <td scope="row">Imran Khan</td>
+                        <td>Manikganj</td>
+                        <td>Manikganj</td>
+                        <td>27</td>
+                    </tr>
+
+                    <tr>
+                        <td scope="row">Nur Ahmed</td>
+                        <td>Cumilla</td>
+                        <td>Cumilla</td>
+                        <td>15</td>
+                    </tr>
+
+                    <tr>
+                        <td scope="row">Sayed Khan</td>
+                        <td>Chandpur</td>
+                        <td>Chandpur</td>
+                        <td>10</td>
+                    </tr> -->
+
+                </tbody>
+            </table>
         </div>
+        <!-- Table -->
 
     </section>
-<!-- Middle Content -->
 
     <!-- Footer -->
     <hr class="hr-style">
@@ -192,10 +234,13 @@
     </section>
     <!-- Footer -->
 
+
     <!-- Javascript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
+
+    <script src="../../common_table/common_table.js"></script>
 </body>
 
 </html>
