--- a/InsuranceSite/agent_information/agent_information.html
+++ b/InsuranceSite/agent_information/agent_information.html
@@ -10,7 +10,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <!-- Css -->
-    <link rel="stylesheet" href="./home_page.css" />
+    <link rel="stylesheet" href="./agent_information.css" />
 
     <title>InsureCow</title>
 </head>
@@ -78,8 +78,102 @@
     <!-- Navbar -->
 
     <!-- Middle Content -->
-    <section>
+    <section class="mt-5 mb-5">
 
+        <!-- Card-1 -->
+        <div class="row" id="card-1">
+            <div class="col-lg-4 d-flex align-self-center justify-content-center">
+                <img src="./images/agent-img.png" alt="">
+            </div>
+            <div class="col-lg-8 d-flex align-self-center justify-content-center">
+                <div class="card-style">
+                    <div class="card" style="width: 34rem;">
+
+                        <div class="card-header ps-4">
+                            Agent Information
+                        </div>
+
+                        <div class="card-body">
+
+                            <div class="row d-flex pb-2 pt-2 line-details">
+                                <div class="col-lg-3 ps-4">Name</div>
+                                <div class="col-lg-1">:</div>
+                                <div class="col-lg-8">Forhad Ibn Haque</div>
+                            </div>
+
+                            <div class="row d-flex pb-2 pt-2 line-details">
+                                <div class="col-lg-3 ps-4">Email</div>
+                                <div class="col-lg-1">:</div>
+                                <div class="col-lg-8">forhad1996rion@gmail.com</div>
+                            </div>
+
+                            <div class="row d-flex pb-2 pt-2 line-details">
+                                <div class="col-lg-3 ps-4">Phone</div>
+                                <div class="col-lg-1">:</div>
+                                <div class="col-lg-8">+8801780995516</div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Card-1 -->
+
+        <!-- Card-2 -->
+        <div class="row mt-4" id="card-2">
+            <div class="col-12 card-style d-flex justify-content-center">
+                <div class="card" style="width: 58rem;">
+
+                    <div class="card-header text-lg-center text-sm-start ps-4">
+                        Agent Details
+                    </div>
+
+                    <div class="card-body">
+
+                        <div class=" d-flex flex-row justify-content-around">
+                            <div class="col-lg-5 left-card-content">
+                                <div class="row pb-3 pt-3 line-details">
+                                    <div>Thana : Mirpur</div>
+                                </div>
+
+                                <div class="row pb-3 pt-3 line-details">
+                                    <div>District : Dhaka</div>
+                                </div>
+
+                                <div class="row pb-lg-3 pt-lg-3 line-details">
+                                    <p></p>
+                                </div>
+                                <div class="row pb-lg-3 pt-lg-3 line-details">
+                                    <p></p>
+                                </div>
+                            </div>
+
+                            <div class="col-lg-5 right-card-content">
+                                <div class="row pb-3 pt-3 line-details">
+                                    <div>Post : Mirpur</div>
+                                </div>
+
+                                <div class="row pb-3 pt-3 line-details">
+                                    <div>Reg. cattle Numbers : 08 </div>
+                                </div>
+                                <div class="row pb-lg-3 pt-lg-3 line-details">
+                                    <p></p>
+                                </div>
+                                <div class="row pb-lg-3 pt-lg-3 line-details">
+                                    <p></p>
+                                </div>
+                            </div>
+
+                        </div>
+
+
+
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Card-2 -->
 
     </section>
     <!-- Middle Content -->
