--- a/InsuranceSite/cow_list/cow_list.html
+++ b/InsuranceSite/cow_list/cow_list.html
@@ -10,7 +10,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <!-- Css -->
-    <link rel="stylesheet" href="../field_agent_list/field_agent.css" />
+    <link rel="stylesheet" href="./cow_list.css" />
     <title>Field Agent List</title>
 </head>
 
@@ -80,86 +80,20 @@
         <!-- Table -->
         <div class="table-responsive col-lg-12 table-style">
 
-            <table class="table table-hover" id="insurance_table">
+            <table class="table table-hover" id="cow-list-table">
                 <thead>
                     <tr>
-                        <th scope="col">Agent Name</th>
+                        <th scope="col">Cattle ID</th>
+                        <th scope="col">Owner Name</th>
                         <th scope="col">Thana</th>
-                        <th scope="col">Post</th>
-                        <th scope="col">Reg. cattle Numbers</th>
+                        <th scope="col">Bread</th>
+                        <th scope="col">Age</th>
+                        <th scope="col">Weight</th>
+                        <th scope="col">Gender</th>
                     </tr>
                 </thead>
                 <tbody>
-                    <!-- <tr>
-                        <td scope="row">Rahim Uddin</td>
-                        <td>Saver</td>
-                        <td>Saver</td>
-                        <td>12</td>
-                    </tr>
-
-                    <tr>
-                        <td scope="row">Rasal Khan</td>
-                        <td>Mirpur</td>
-                        <td>Mirpur</td>
-                        <td>08</td>
-                    </tr>
-
-                    <tr>
-                        <td scope="row">Karim Ali</td>
-                        <td>Khulna</td>
-                        <td>Khulna</td>
-                        <td>25</td>
-                    </tr>
-
-                    <tr>
-                        <td scope="row">Satu Rahman</td>
-                        <td>Kushtia</td>
-                        <td>Kushtia</td>
-                        <td>20</td>
-                    </tr>
-
-                    <tr>
-                        <td scope="row">Asif Rahman</td>
-                        <td>Bagura</td>
-                        <td>Bagura</td>
-                        <td>16</td>
-                    </tr>
-
-                    <tr>
-                        <td scope="row">Salman Khan</td>
-                        <td>Rangpur</td>
-                        <td>Rangpur</td>
-                        <td>05</td>
-                    </tr>
-
-                    <tr>
-                        <td scope="row">Raju Uddin</td>
-                        <td>Uttara</td>
-                        <td>Uttara</td>
-                        <td>27</td>
-                    </tr>
-
-                    <tr>
-                        <td scope="row">Imran Khan</td>
-                        <td>Manikganj</td>
-                        <td>Manikganj</td>
-                        <td>27</td>
-                    </tr>
-
-                    <tr>
-                        <td scope="row">Nur Ahmed</td>
-                        <td>Cumilla</td>
-                        <td>Cumilla</td>
-                        <td>15</td>
-                    </tr>
-
-                    <tr>
-                        <td scope="row">Sayed Khan</td>
-                        <td>Chandpur</td>
-                        <td>Chandpur</td>
-                        <td>10</td>
-                    </tr> -->
-
+                    
                 </tbody>
             </table>
         </div>
@@ -240,7 +174,7 @@
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
 
-    <script src="./field_agent.js"></script>
+    <script src="./cow_list.js"></script>
 </body>
 
 </html>
