--- a/InsuranceSite/home_page/home_page.html
+++ b/InsuranceSite/home_page/home_page.html
@@ -97,7 +97,7 @@
                                 </div>
                                 <div class="card-body text-center px-0 pt-0">
                                     <img src="./images/cow.png" class="img-fluid card-body-img mb-3" alt="...">
-                                    <a href="#" class="btn card-btn">Continue</a>
+                                    <a href="../cow_list/cow_list.html" class="btn card-btn">Continue</a>
                                 </div>
 
                             </div>
@@ -112,7 +112,7 @@
 
                             <div class="card-body text-center px-0 pt-0">
                                 <img src="./images/group.png" class="img-fluid card-body-img mb-3" alt="...">
-                                <a href="#" class="btn card-btn">Continue</a>
+                                <a href="../field_agent_list/fiels_agent.html" class="btn card-btn">Continue</a>
                             </div>
                         </div>
                     </div>
